# jiga

client/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
client/src/: AddTask.tsx  App.tsx  Canvas.tsx  KanbanBoard.tsx  ProjectContext.tsx  StatusColumn.tsx  TaskCard.tsx  Trash.tsx  api.ts  index.css  main.tsx  projectContext.tsx  queries.ts  query.ts  service.ts  types.ts  utils.ts
client/src/components/: AddTask.tsx  CreateProject.tsx  Header.tsx  KanbanBoard.tsx  ProjectManager.tsx  SelectProject.tsx  StatusColumn.tsx  TaskCard.tsx
server/: .gitignore  Cargo.toml  data.json  database-shm  database-wal
server/migrations/: 20260608200116_init.sql
server/src/: config.rs  error.rs  list.rs  main.rs  prelude.rs  project.rs  state.rs  task.rs
server/src/list/: api.rs  model.rs  repo.rs
server/src/project/: api.rs  model.rs
server/src/status/: model.rs  repo.rs
server/src/task/: api.rs  mod.rs  model.rs  repo.rs  task_create.rs  task_delete.rs  task_update.rs
